syntax = "proto3";

package bank_account;

message Response {
  string events = 1;
}

// Commands
message OpenAccountCommand {
  string id = 1;
  double initial_balance = 2;
}

message DepositFundsCommand {
  string id = 1;
  double amount = 2;
}

message WithdrawFundsCommand {
  string id = 1;
  double amount = 2;
}

// Service
service BankAccount {
  // Opens an account
  rpc OpenAccount (OpenAccountCommand) returns (Response) {}
  // Deposit funds
  rpc DepositFunds (DepositFundsCommand) returns (Response) {}
  // Withdraw funds
  rpc WithdrawFunds (WithdrawFundsCommand) returns (Response) {}
}
